--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Get paths
         id: relevant-paths
         run: |
-          echo "::set-output name=frontend-paths::$(echo ${{ steps.changed.outputs.all }} | grep -Eo '${{ inputs.frontend-path-regexp }}' | sort -u )"
-          echo "::set-output name=backend-paths::$(echo ${{ steps.changed.outputs.all }} | grep -Eo '${{ inputs.backend-path-regexp }}' | sort -u )"
+          echo "::set-output name=frontend-paths::$(echo ${{ steps.changed.outputs.all }} | grep -Eo '${{ inputs.frontend-path-regexp }}' | sort -u | xargs )"
+          echo "::set-output name=backend-paths::$(echo ${{ steps.changed.outputs.all }} | grep -Eo '${{ inputs.backend-path-regexp }}' | sort -u | xargs )"
 
       - uses: actions/setup-node@v2
         with:
@@ -44,7 +44,7 @@ jobs:
       - name: Get go coverage for caller's PR
         id: pr-backend
         run: |
-          PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
+          PATHS=(${{ steps.relevant-paths.outputs.backend-paths }})
           if [ -z "$PATHS" ]; then
               echo "No backend paths to check"
               exit 0
@@ -75,7 +75,7 @@ jobs:
       - name: Get TypeScript coverage for caller's PR
         id: pr-frontend
         run: |
-          PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
+          PATHS=(${{ steps.relevant-paths.outputs.frontend-paths }})
           if [ -z "$PATHS" ]; then
               echo "No frontend paths to check"
               exit 0
@@ -126,7 +126,7 @@ jobs:
       - name: Get go coverage on caller's main
         id: main-backend
         run: |
-          PATHS=${{ steps.relevant-paths.outputs.backend-paths }}
+          PATHS=(${{ steps.relevant-paths.outputs.backend-paths }})
           if [ -z "$PATHS" ]; then
               echo "No backend paths to check"
               exit 0
@@ -156,7 +156,7 @@ jobs:
       - name: Get TypeScript coverage on caller's main
         id: main-frontend
         run: |
-          PATHS=${{ steps.relevant-paths.outputs.frontend-paths }}
+          PATHS=(${{ steps.relevant-paths.outputs.frontend-paths }})
           if [ -z "$PATHS" ]; then
               echo "No frontend paths to check"
               exit 0
@@ -244,7 +244,7 @@ jobs:
                   PR_COV=$(echo $CURR_PR_LINE | cut -d '|' -f 2 | xargs)
                   MAIN_COV=$(echo $CURR_MAIN_LINE | cut -d '|' -f 2 | xargs)
                   COMMENT="$COMMENT|  $PLUGIN |   $MAIN_COV%  |   $PR_COV%    |   $(bc <<<"$PR_COV - $MAIN_COV")% |
-                  "
+            "
               done
             fi
 
